--- a/Lab_Website_2/views/register.html
+++ b/Lab_Website_2/views/register.html
@@ -1,4 +1,4 @@
-
+<!-- Registration Page -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -11,112 +11,111 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<link href="../resources/css/my_style.css" rel="stylesheet">
   </head>
+
   <body>
-	
-	<img src="../resources/img/beproudcapaabanner.jpg" class="img-fluid" alt="Registration Page Banner for CU Football">
-    <br>
-	<br>
-	<div class="container">
-		<form action="home.html">
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label" for="fullName">Full Name</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" name="fullName" id="fullName"  placeholder="Enter Name">
-				</div>
-			</div>
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label"  for="emailAddress">Email address</label>
-				<div class="col-sm-10">
-					<input type="email" class="form-control" name="emailAddress" id="emailAddress" placeholder="Enter email">
-				</div>
-			</div>
-			<div class="form-group row">
-				<label  class="col-sm-2 col-form-label" for="passwordFirst">Password</label>
-				<div class="col-sm-10">
-					<input type="password" class="form-control" id="passwordFirst" name="passwordFirst" placeholder="Password">
-				</div>
-			</div>
-			<div class="form-group row">
-				<label  class="col-sm-2 col-form-label" for="passwordConfirm">Confirm Password</label>
-				<div class="col-sm-10">
-					<input type="password" class="form-control" id="passwordConfirm" name="passwordConfirm" placeholder="Confirm Password">
-				</div>
-			</div>
-			 <fieldset class="form-group">
-				<div class="row">
-				  <legend class="col-form-label col-sm-2 pt-0">CU Boulder Alumni</legend>
-				  <div class="col-sm-10">
-					<div class="form-check">
-					  <input class="form-check-input" type="radio" name="alumniStatus" id="alumniStatusYes" value="Yes" required>
-					  <label class="form-check-label" for="alumniStatusYes">
-						Yes
-					  </label>
-					</div>
-					<div class="form-check">
-					  <input class="form-check-input" type="radio" name="alumniStatus" id="alumniStatusNo" value="No">
-					  <label class="form-check-label" for="alumniStatusNo">
-						No
-					  </label>
-					</div>
-				  </div>
-				</div>
-			  </fieldset>
-			<fieldset class="form-group">
-				<div class="row">
-				  <legend class="col-form-label col-sm-2 pt-0">CU Boulder Student</legend>
-				  <div class="col-sm-10">
-					<div class="form-check">
-					  <input class="form-check-input" onclick="viewStudentStats('student_status', 1)" type="radio" name="studentStatus" id="studentStatusYes" value="Yes" required>
-					  <label class="form-check-label" for="studentStatusYes">
-						Yes
-					  </label>
-					</div>
-					<div class="form-check">
-					  <input class="form-check-input" onclick="viewStudentStats('student_status', 0)" type="radio" name="studentStatus" id="studentStatusNo" value="No">
-					  <label class="form-check-label" for="studentStatusNo">
-						No
-					  </label>
-					</div>
-				  </div>
-				</div>
-				<div class="row" id="student_status">
-				  <legend class="col-form-label col-sm-2 pt-0">Student Status</legend>
-				  <div class="col-sm-10">
-					<div class="form-check">
-					  <input class="form-check-input" onclick="viewStudentStats('undergrad_select', 1);viewStudentStats('grad_select', 0);" type="radio" name="student_type" id="undergrad" value="U">
-					  <label class="form-check-label" for="undergrad">
-						Undergrad
-					  </label>
-					</div>
-					<select name="undergrad_level" id="undergrad_select" class="custom-select custom-select-sm">
-					  <option selected>Select Student Status</option>
-					  <option value="1">Freshman</option>
-					  <option value="2">Sophomore</option>
-					  <option value="3">Junior</option>
-					  <option value="4">Senior</option>
-					</select>
-					<div class="form-check">
-					  <input class="form-check-input" onclick="viewStudentStats('undergrad_select', 0);viewStudentStats('grad_select', 1);" type="radio" name="student_type" id="graduate" value="G">
-					  <label class="form-check-label" for="graduate">
-						Grad
-					  </label>
-					</div>
-					<select name="grad_level" id="grad_select" class="custom-select custom-select-sm">
-					  <option selected>Select Student Status</option>
-					  <option value="1">Masters</option>
-					  <option value="2">MBA</option>
-					  <option value="3">PhD</option>
-					</select>
-				  </div>
-				</div>
-			  </fieldset>
-			<input type="submit" value="submit" class="btn btn-primary btn-block">
-		</form>
-		<br>
-	</div>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-	<script src="../resources/js/my_scripts.js"></script>
-</body>
+
+  	<img src="../resources/img/beproudcapaabanner.jpg" class="img-fluid" alt="Registration Page Banner for CU Football">
+      <br>
+  	<br>
+  	<div class="container">
+  		<form action="home.html">
+
+        <div class="form-group">
+          <label for="formGroupEnterName">Full Name</label>
+          <input type="text" class="form-control" id="formGroupEnterName" placeholder="Enter Name">
+        </div>
+
+        <div class="form-group">
+          <label for="formGroupEnterEmail">Email</label>
+          <input type="text" class="form-control" id="formGroupEnterEmail" placeholder="Enter Email">
+        </div>
+
+        <div class="form-group">
+          <label for="formGroupEnterPassword">Password</label>
+          <input type="text" class="form-control" id="formGroupEnterPassword" placeholder="Enter Password">
+        </div>
+
+        <div class="form-group">
+          <label for="formGroupConfirmPassword">Confirm Password</label>
+          <input type="text" class="form-control" id="formGroupConfirmPassword" placeholder="Confirm Password">
+        </div>
+
+
+
+
+        <div class="form-group">
+          <label for="formGroupConfirmPassword">CU Boulder Alumni?</label>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="cuBoulderAlumni" id="cuBoulderAlumniY" value="Yes">
+            <label class="form-check-label" for="cuBoulderAlumni">
+              Yes
+            </label>
+          </div>
+
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="cuBoulderAlumni" id="cuBoulderAlumniY" value="No">
+            <label class="form-check-label" for="cuBoulderAlumni">
+              No
+            </label>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="formGroupConfirmPassword">CU Boulder Student?</label>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="cuBoulderStudent" id="cuBoulderStudentY" value="Yes" onclick="viewStudentStatus('student_status', 1);">
+            <label class="form-check-label" for="cuBoulderStudent">
+              Yes
+            </label>
+          </div>
+
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="cuBoulderStudent" id="cuBoulderStudentN" value="No" onclick="viewStudentStatus('student_status', 0);">
+            <label class="form-check-label" for="cuBoulderStudent">
+              No
+            </label>
+          </div>
+        </div>
+
+
+        <div class="form-group" id="student_status" style="visibility:hidden">
+          <label for="formGroupConfirmPassword">Student Status</label>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="underOrGrad" id="undergrad" value="u" onclick="viewStudentStatus('undergrad_select', 1); viewStudentStatus('grad_select', 0);">
+            <label class="form-check-label" for="cuBoulderStudent">
+              Undergraduate
+            </label>
+            </br>
+            <select class="form-control" id="undergrad_select">
+              <option>Freshman</option>
+              <option>Sophomore</option>
+              <option>Junior</option>
+              <option>Senior</option>
+              <option>Other</option>
+            </select>
+          </div>
+
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="underOrGrad" id="grad" value="g" onclick="viewStudentStatus('undergrad_select', 0); viewStudentStatus('grad_select', 1);">
+            <label class="form-check-label" for="cuBoulderStudent">
+              Graduate
+            </label>
+            </br>
+            <select class="form-control" id="grad_select">
+              <option>MA</option>
+              <option>MBA</option>
+              <option>PhD</option>
+            </select>
+          </div>
+        </div>
+
+        <!--https://stackoverflow.com/questions/3303675/how-to-make-an-input-type-button-act-like-a-hyperlink-and-redirect-using-a-get-r-->
+  			<input type="submit" value="Submit" class="btn btn-primary btn-block" onclick="window.location='/home.html';">
+  		</form>
+  	</div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="../resources/js/my_scripts.js"></script>
+  </body>
 </html>
